--- a/guessing-game/style.css
+++ b/guessing-game/style.css
@@ -1,20 +1,16 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
 header {
   text-align: left;
 }
 
 body {
+  font-family: "Press Start 2P", sans-serif;
   text-align: center;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background-color: #333;
+  color: white;
 }
 
 section {
@@ -22,10 +18,9 @@ section {
   flex-direction: column;
 }
 
-/*p {
-  display: flex;
-  text-align: center;
-}*/
+p {
+  margin: 20px 0;
+}
 
 .number {
   margin: auto;
@@ -48,6 +43,10 @@ section {
   margin: auto;
   width: 13rem;
   font-size: 30px;
+  font-family: inherit;
+  border: 2px solid white;
+  background-color: #333;
+  color: white;
 }
 
 .btn {
@@ -55,5 +54,24 @@ section {
 }
 
 .message {
-  font-size: 30px;
+  font-size: 35px;
+}
+
+.score,
+.label-highscore,
+.label-score,
+.again {
+  font-size: 23px;
+}
+
+.number-range {
+  font-size: 21px;
+  margin-bottom: 27px;
+}
+
+.again {
+  background-color: #333;
+  border: 3px solid white;
+  color: white;
+  font-family: inherit;
 }
